argo-deployment/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etax-frontend
  labels:
    app: etax-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etax-frontend
  template:
    metadata:
      labels:
        app: etax-frontend
    spec:
      containers:
      - image: docker.io/delenies/etax-frontend:latest
        name: etax-frontend
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        securityContext:
          runAsUser: 0  # Ensure the container runs as root
          allowPrivilegeEscalation: true
        volumeMounts:
        - name: tmp-volume
          mountPath: /var/run  # Mount the /var/run directory
      volumes:
      - name: tmp-volume
        emptyDir: {}  # Use an emptyDir volume for /var/run
