argo-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etax-frontend-service
  labels:
    app: etax-frontend
spec:
  selector:
    app: etax-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
