argo-deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: etax-frontend-route
spec:
  to:
    kind: Service
    name: etax-frontend-service
  port:
    targetPort: 3000
